# Final_Project_Monorepo

./: .env.example  .gitignore  AGENTS.md  DESIGN_DECISIONS.md  Makefile  PLAN.md  README.md  mlflow.db  monolithic_constants.json  pyproject.toml
.agents/: README.md  handoff.md  known-gaps.md  project-context.md  repo-map.md  working-agreement.md
.claude/: launch.json
.github/workflows/: ci.yml  deploy.yml  nightly.yml
analysis/: architecture_cost_accuracy_plot.py  comparison_table.py  eats_sensitivity.py  energy_report.py  monolithic_llm_sweep.py  pareto_plot.py  statistical_analysis.py
architectures/: ACTIVE_ORACLE_ARCHITECTURE.md  BLACKBOARD_ARCHITECTURE.md  NEW_ARCHITECTURE.md  RTOS_WATCHDOG_ARCHITECTURE.md  __init__.py  active_oracle.py  base.py  blackboard.py  blackboard_base.py  decentralized_blackboard_architecture.py  dynamic_bidding_architecture.py  ensemble.py  entropy_based_blackboard.py  monolithic.py  multi_agent.py  multi_agent_crew.py  pure_swarm.py  routing.py  rtos_watchdog.py  speculative_decoding.py
benchmarks/: __init__.py  _code_execution.py  arc.py  base.py  custom_stratified.py  gsm8k.py  hellaswag.py  humaneval.py  humaneval_plus.py  livecodebench.py  mmlu.py  truthfulqa.py
core/: __init__.py  config.py  hosts.py  model_catalog.py  models.py  prompt.py  token_budget.py  types.py
docker/: Dockerfile.api  Dockerfile.mlflow  Dockerfile.runner  docker-compose.yml
docs/poster/: .gitignore  main.tex
docs/poster-html/: Atlas.html  col1.js  col2.js  col3.js  s1.js  s10.js  s2.js  s3.js  s4.js  s5.js  s6.js  s7.js  s8.js  s9.js
docs/poster-presentation/: .gitignore  main.tex  theme.tex
docs/term_report/: .gitignore  main.tex  (+1 more)
evaluation/: __init__.py  baselines.py  cost.py  energy.py  metrics.py  reporter.py  statistics.py
experiments/: __init__.py  monolithic_sweep_helper.py  pilot_study.py  run_experiment.py  runner.py
infrastructure/: RTX6000_METRICS_PROXY.md  RTX6000_MODEL_SWITCHING.md  WP1_RUNBOOK.md
mlops/: __init__.py  callbacks.py  registry.py  tracking.py
results/: exp_0041ffdb.json  exp_0041ffdb.md  exp_006d7821.json  exp_006d7821.md  exp_018ab0cf.json  exp_018ab0cf.md  exp_02c9a56a.json  exp_02c9a56a.md  exp_03b53489.json  exp_03b53489.md  exp_04a0b5ca.json  exp_04a0b5ca.md  exp_06cb6a22.json  exp_06cb6a22.md  exp_06e26fa4.md  exp_06edfd36.json  exp_06edfd36.md  exp_0759858a.json  exp_0759858a.md  exp_077ad200.json  exp_077ad200.md  exp_085e1b0a.json  exp_085e1b0a.md  exp_0970d3d0.json  exp_0970d3d0.md  exp_09c5edf6.json  exp_09c5edf6.md  exp_0bc77df5.json  exp_0bd43cb7.json  exp_0bd43cb7.md  exp_0ce74549.json  exp_0ce74549.md  exp_0d5bf608.json  exp_0d5bf608.md  exp_0edc4cf9.json  exp_0edc4cf9.md  exp_0f5e3e46.json  exp_0f5e3e46.md  exp_0fcbc737.json  exp_0fcbc737.md  (+379 more)
scripts/: build_benchmark_tables.py  build_latest_benchmark_tables.py  emit_latex_rows.py  export_poster_pdf.py  fix_eats_c9512969.py  normalize_eats.py  remove_old_experiments_by_architecture.py  remove_small_sample_experiments.py  rescore_gsm8k.py
tests/: test_arc_benchmark.py  test_architectures.py  test_blackboard.py  test_coding_benchmark_logic.py  test_coding_benchmarks.py  test_entropy_blackboard.py  test_metrics.py  test_models_confidence.py  test_monolithic_sweep.py  test_prompt.py  test_qwen_non_thinking.py  test_reporter.py  test_token_budget.py  test_web_api.py
training/: README.md  __init__.py  config.py  datasets.py  registry.py  train_lora.py
(+387 files in other folders)
