[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thesis"
version = "0.1.0"
description = "SLM-LLM Hybrid Architecture Benchmark Platform"
requires-python = ">=3.11"

[project.optional-dependencies]

# Core runtime
core = [
    "pyyaml>=6.0",
    "requests>=2.31",
    "datasets>=2.19",
    "huggingface_hub>=0.23",
]

# API providers
api = [
    "openai>=1.30",
    "together>=1.1",
]

# MLflow tracking
mlflow = [
    "mlflow>=2.13",
    "boto3>=1.34",
]

# FastAPI backend
backend = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "boto3>=1.34",
]

# Full runner (all inference + tracking)
runner = [
    "thesis[core]",
    "thesis[api]",
    "thesis[mlflow]",
]

# API server
api_server = [
    "thesis[backend]",
    "thesis[mlflow]",
]

# Development
dev = [
    "thesis[runner]",
    "thesis[backend]",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-requests",
    "types-PyYAML",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "architectures*", "benchmarks*", "evaluation*", "experiments*", "mlops*", "web*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
